# CloPeMa_ClothSimulation

./: .gitignore  README.md  clean_packages.sh
Tests/DemoClothPhysx33_Kevin/: DemoClothPhysx33.cbp  DemoClothPhysx33.depend
Tests/DemoTestClothPhysx33/: DemoTest.vcxproj
Tests/DemoTestClothPhysx33_Mobeen/: DemoTest.sln
Tests/DemoTestCodeBlocks/: DemoTestCodeBlocks.cbp  DemoTestCodeBlocks.depend  DemoTestCodeBlocks.layout  main.cpp
Tests/DemoTestCodeBlocks/media/: roundTable.mtl
Tests/DemoTestStatic/: CMakeLists.txt  CMakeLists.txt~  DemoTest.vcxproj  demo.sh  main.cpp  main.cpp~
Tests/DemoTestStatic_Qt/demoteststatic/: main.cpp
Tests/DemoTestStatic_Qt/demoteststatic-build-desktop-Qt_4_8_1_in_PATH__System__Release/: Makefile
Tests/UbuntuTests/DemoClothPhysx33/: DemoClothPhysx33.cbp  DemoClothPhysx33.depend  DemoClothPhysx33.layout  PhysXCloth.h  main.cxx
Tests/UbuntuTests/DemoClothPhysx33_Kevin/: DemoClothPhysx33.layout  DemoClothPhysx33_Manipulation.layout  main.cxx
Tests/UbuntuTests/DemoClothPhysx33_Manipulation/: CMakeLists.txt~HEAD  CMakeLists.txt~~HEAD  DemoClothPhysx33.depend  DemoClothPhysx33_Manipulation.cbp  DemoClothPhysx33_Manipulation.depend  DemoClothPhysx33_Manipulation.layout  PhysXCloth.h  PhysXCloth.h~~HEAD  main.cxx  main.cxx~~HEAD
Tests/UbuntuTests/ObjTest/: ObjTest.cbp  ObjTest.depend  ObjTest.layout  main.cpp
Tests/UbuntuTests/PhysXTests/SimpleBox/: CMakeLists.txt  SimpleBox.cbp  SimpleBox.depend  SimpleBox.layout  SimpleBox.layout.cbTemp  main.cxx
testLIBs/: CMakeLists.txt  main.cpp
(+4 files in other folders)
